Fixed misalignment of solid gauges on reform show page.

--- a/app/assets/stylesheets/components/gaugesContainer.scss
+++ b/app/assets/stylesheets/components/gaugesContainer.scss
@@ -20,3 +20,11 @@
     width: 24px;
     height: 24px;
   }
+
+.gaugesContainer.mod-solid-gauges {
+  
+  .gaugesContainer-small {
+    padding-top: 41px;
+  }
+  
+}
